--- a/skeleton-main/client/src/components/modules/JoinLobby.css
+++ b/skeleton-main/client/src/components/modules/JoinLobby.css
@@ -6,6 +6,10 @@
   color: white;
 }
 
+.paddingmove {
+  padding-bottom: 10px;
+}
+
 .JoinLobby-TextEntry {
   padding: 5px 12px;
   font-size: 14px;
